# bugbounty-mcp-server

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  example_usage.py  pyproject.toml  start-server.sh  test_tools.py
bugbounty_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: AGENTS.md  CLAUDE.md  __init__.py  logger.py  managers.py  mcp_server.py  server.py
src/mcp_server/: __init__.py  __main__.py  app.py
src/rest_api_server/: __init__.py  __main__.py  app.py  logger.py  managers.py
src/rest_api_server/tools/: __init__.py
src/rest_api_server/tools/amass/: AGENTS.md  CLAUDE.md  __init__.py  amass.py
src/rest_api_server/tools/arjun/: AGENTS.md  CLAUDE.md  __init__.py  arjun.py
src/rest_api_server/tools/dalfox/: AGENTS.md  CLAUDE.md  __init__.py  dalfox.py
src/rest_api_server/tools/dirb/: CLAUDE.md  __init__.py  dirb.py
src/rest_api_server/tools/dirsearch/: AGENTS.md  CLAUDE.md  __init__.py  dirsearch.py
src/rest_api_server/tools/dnsenum/: AGENTS.md  CLAUDE.md  __init__.py  dnsenum.py
src/rest_api_server/tools/feroxbuster/: AGENTS.md  CLAUDE.md  __init__.py  feroxbuster.py
src/rest_api_server/tools/ffuf/: AGENTS.md  CLAUDE.md  __init__.py  ffuf.py
src/rest_api_server/tools/fierce/: AGENTS.md  CLAUDE.md  fierce.py
src/rest_api_server/tools/gau/: CLAUDE.md  __init__.py  gau.py
src/rest_api_server/tools/gobuster/: AGENTS.md  CLAUDE.md  __init__.py  gobuster.py
src/rest_api_server/tools/hakrawler/: AGENTS.md  CLAUDE.md  __init__.py  hakrawler.py
src/rest_api_server/tools/httpx/: AGENTS.md  CLAUDE.md  __init__.py  httpx.py
src/rest_api_server/tools/jaeles/: CLAUDE.md  (+2 more)
src/rest_api_server/utils/: __init__.py  base_tool_pattern.py  commands.py  confidence_mapping.py  deduplication.py  parameter_utils.py  registry.py  severity_mapping.py
src/rest_api_server/workflows/: __init__.py
src/tools/: __init__.py
src/tools/amass/: amass.py
src/tools/arjun/: arjun.py
src/tools/dalfox/: dalfox.py
src/tools/dirb/: CLAUDE.md  dirb.py
src/tools/dirsearch/: CLAUDE.md  dirsearch.py
src/tools/dnsenum/: dnsenum.py
src/tools/feroxbuster/: CLAUDE.md  feroxbuster.py
src/tools/ffuf/: ffuf.py
src/tools/fierce/: __init__.py  fierce.py
src/tools/gau/: CLAUDE.md  gau.py
src/tools/gobuster/: CLAUDE.md  gobuster.py
src/tools/hakrawler/: hakrawler.py
src/tools/httpx/: CLAUDE.md  httpx.py
src/tools/jaeles/: CLAUDE.md  jaeles.py
src/tools/katana/: CLAUDE.md  katana.py
src/tools/masscan/: CLAUDE.md  masscan.py
src/tools/nikto/: nikto.py
src/tools/nmap/: CLAUDE.md  nmap.py
src/tools/nmap_advanced/: CLAUDE.md  nmap_advanced.py
src/tools/nuclei/: CLAUDE.md  nuclei.py
src/tools/paramspider/: CLAUDE.md  paramspider.py
src/tools/rustscan/: rustscan.py
src/tools/sqlmap/: CLAUDE.md  sqlmap.py
src/tools/subfinder/: CLAUDE.md  subfinder.py
src/tools/wafw00f/: wafw00f.py
src/tools/waybackurls/: CLAUDE.md  waybackurls.py
src/tools/wfuzz/: CLAUDE.md  wfuzz.py
src/tools/wpscan/: CLAUDE.md  wpscan.py
src/tools/x8/: CLAUDE.md  x8.py
src/utils/: commands.py  registry.py
src/workflows/: __init__.py
src/workflows/business_logic/: CLAUDE.md  business_logic.py
src/workflows/comprehensive_assessment/: CLAUDE.md  comprehensive_assessment.py
src/workflows/file_upload_testing/: CLAUDE.md  file_upload_testing.py
src/workflows/osint/: CLAUDE.md  osint.py
src/workflows/reconnaissance/: CLAUDE.md  reconnaissance.py
src/workflows/vulnerability_hunting/: CLAUDE.md  __init__.py  vulnerability_hunting.py
(+79 files in other folders)
