[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugbounty-mcp-server"
version = "1.0.0"
description = "Bug Bounty MCP Server - AI Agent Communication Interface for Bug Bounty Hunting"
license = {text = "MIT"}
authors = [
    {name = "Bug Bounty MCP", email = "contact@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "requests>=2.32.5",
    "fastmcp>=2.12.2",
    "aiohttp>=3.12.15",
]

[project.scripts]
bugbounty-mcp = "src.mcp_server:main"

[project.urls]
Homepage = "https://github.com/yourusername/bugbounty-mcp-server"
Repository = "https://github.com/yourusername/bugbounty-mcp-server"
Issues = "https://github.com/yourusername/bugbounty-mcp-server/issues"

[tool.setuptools]
py-modules = ["src.mcp_server", "src.server"]