[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugbounty-mcp-server"
version = "1.0.0"
description = "Bug Bounty MCP Server - AI Agent Communication Interface for Bug Bounty Hunting"
license = {text = "MIT"}
authors = [
    {name = "Bug Bounty MCP", email = "marek.hovadik@seznam.cz"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.2",
    "flask>=3.1.2",
    "requests>=2.32.5",
]

[project.scripts]
bugbounty-mcp = "src.mcp_server:main"

[project.urls]
Homepage = "https://github.com/yourusername/bugbounty-mcp-server"
Repository = "https://github.com/yourusername/bugbounty-mcp-server"
Issues = "https://github.com/yourusername/bugbounty-mcp-server/issues"

[tool.setuptools]
packages = {find = {include = ["src", "src.*"]}}

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pre-commit>=4.3.0",
    "pydocstyle>=6.3.0",
    "ruff>=0.12.12",
    "pyright>=1.1.405",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = [
    "tests",
    "tools"
]
skips = ["B101"]  # Skip assert_used test (common in development)

[tool.pydocstyle]
convention = "google"
# Check all code under the repo except tests
match_dir = "(?!tests).*"

[tool.pyright]
include = ["src"]
exclude = [
    "tests",
    "tools"
]
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportAttributeAccessIssue = "none"
pythonVersion = "3.11"
